src/styles/cardContainer.scss
.cardContainer {
  border-top: 1px;
  border-style: solid;
  @apply dark:border-neutral-700 border-neutral-800;
  @apply dark:bg-[#111] bg-white;
  padding-block: 3rem;
  padding-inline: 12rem;
  position: relative;
  width: 100%;

  /* Responsive adjustments */
  @media (max-width: 1280px) { 
    padding-inline: 8rem; 
  }

  @media (max-width: 1024px) {
    padding-inline: 4rem; 
  }

  @media (max-width: 768px) { 
    padding-inline: 2rem; 
  }

  @media (max-width: 640px) { 
    padding-block: 2rem; 
    padding-inline: 1rem; 
  }

  @media (max-width: 480px) {  // For smaller mobile phones
    padding-block: 1.5rem;  // Reduce vertical padding further
    padding-inline: 0.5rem;  // Reduce horizontal padding further 
  }

  &__small {
    &:before {
      right: -6px;
      bottom: -6px;
    }
  }
}

.cardCustom {
  .card {
    overflow: visible;
    border: 1px;
    border-style: solid;
    @apply dark:border-neutral-500 border-neutral-800;
    @apply dark:bg-neutral-900 bg-neutral-50;
    padding: 32px;
    border-radius: 16px;
    position: relative;
    width: 100%;

    &:hover {
      @apply dark:border-neutral-500 border-neutral-800;
    }

    &:before {
      position: absolute;
      content: "";
      right: -10px;
      bottom: -10px;
      z-index: -1;
      width: 100%;
      height: 100%;
      border: 1px;
      border-style: solid;
      @apply dark:border-neutral-500 border-neutral-800;

      border-radius: inherit;
    }
  }
}

